Javadoc fixes