@@ -110,32 +110,9 @@ signing {
     sign publishing.publications.gpr
 }
 
-javadoc {
-    failOnError false
-    options.addBooleanOption('html5', true)
-    options.addStringOption('encoding', 'UTF-8')
-    options.addStringOption('charSet', 'UTF-8')
-    //options.addBooleanOption('-enable-preview', true)
-    //options.addStringOption('-release', '20')
-    options.addBooleanOption('-ignore-source-errors', true)
-    options.addStringOption('Xdoclint:none', '-quiet')
-}
-
 java {
     withJavadocJar()
     withSourcesJar()
-}
-
-compileJava {
-    sourceCompatibility = JavaVersion.VERSION_20
-    targetCompatibility = JavaVersion.VERSION_20
-}
-
-test {
-    useJUnitPlatform()
-    jvmArgs += "--enable-preview"
-    jvmArgs += "--enable-native-access=java4ever.binding"
-
 }
 
 // Task for JavaPoet generation of EVER-SDK API
@@ -163,7 +140,23 @@ tasks.register('generateFfmApiBridge') {
     println "FFM API generation ended."
 }
 
+tasks.withType(Javadoc).configureEach {
+    javadocTool = javaToolchains.javadocToolFor {
+        languageVersion = JavaLanguageVersion.of(20)
+    }
+    failOnError false
+    options.addBooleanOption('html5', true)
+    options.addStringOption('encoding', 'UTF-8')
+    options.addStringOption('charSet', 'UTF-8')
+    options.addBooleanOption('-enable-preview', true)
+    options.addStringOption('-release', '20')
+    options.addBooleanOption('-ignore-source-errors', true)
+    options.addStringOption('Xdoclint:none', '-quiet')
+}
+
 tasks.withType(JavaCompile).configureEach {
+    sourceCompatibility = JavaVersion.VERSION_20
+    targetCompatibility = JavaVersion.VERSION_20
     javaCompiler = javaToolchains.compilerFor {
         languageVersion = JavaLanguageVersion.of(20)
     }
@@ -182,6 +175,7 @@ tasks.withType(Test) {
     javaLauncher = javaToolchains.launcherFor {
         languageVersion = JavaLanguageVersion.of(20)
     }
+    useJUnitPlatform()
     jvmArgs += "--enable-preview"
     jvmArgs += "--enable-native-access=java4ever.binding"
 }
